# vehicle-edge-platform

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build-all.sh  install_deps_u24.04.sh  run_avtp_canplayer.sh  run_aws_ingestion.sh  run_canplayer.sh  run_framework.sh  run_framework_avtp.sh  run_kuksa_logger.sh  setup.sh  setup_avtp_loopback.sh  sync-all.sh  test-devcontainer-build.sh  validate_mappings.sh
.devcontainer/: Dockerfile  devcontainer.json
can-tools/: candump  cangen  canplayer  cansend  redme.md
deploy/: 01-otel-mqtt-chain.sh  02-avtp-vss-mqtt-chain.sh  03-full-pipeline.sh  04-auto-pipeline.sh  README.md  avtp-canplayer.sh  kuksa-logger.sh  pull-kuksa-arm64.sh  pull-mosquitto-arm64.sh  setup_avtp_loopback.sh
docker/autosd/: Dockerfile.autosd  Dockerfile.runtime  Dockerfile.runtime.ubi  README.md  build_autosd.sh  build_container.sh  build_cross.sh  build_runtime.sh  build_runtime_ubi.sh
